Done with the design?

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body id="body">
     <div class="form">
-      <h2 class="text-white">Login Form</h2>
+      <h2 class="text-white text-center" >Login Form</h2>
       <form action=""  method="get">
         
       <div class="input-box"> <br> 
