--- a/register.html
+++ b/register.html
@@ -7,6 +7,7 @@
    <link rel="stylesheet" href="all.min.css">
    <link rel="stylesheet" href="register.css">
    <link rel="stylesheet" href="footer.css">
+   <!-- <script src="boostrap.bundle.min.js"></script> -->
    <title>Register</title>
 </head>
 <body>
@@ -19,7 +20,7 @@
   
    <div class="container-fliud" id="form-box">
    
-        <form action="" id="main-form" onload="first()" method="get" >
+        <form action="" id="main-form" method="" >
            <div class="row">
            <h5 class="text-light text-center">Registration Form</h5>
     <hr class="text-white">
@@ -147,6 +148,7 @@
     </footer>
 <!-- botstrap javascript -->
 <script src="form.js"></script>
-<script src="boostrap.bundle.min.js"></script>
+<!-- <script src="form-axios.js"></script> -->
+
 </body>
 </html>
